# caduceus

./: .gitignore  ARCHITECTURE.md  CADUCEUS.md  Cargo.toml  FEATURES.md  LICENSE  LICENSES-THIRD-PARTY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.caduceus/: mcp-catalog.json  mcp.json
.caduceus/agents/: code-reviewer.md  test-writer.md
.caduceus/agents/accessibility-expert/: agent.md
.caduceus/agents/api-designer/: agent.md
.caduceus/agents/architect/: agent.md
.caduceus/agents/backend-dev/: agent.md
.caduceus/agents/data-engineer/: agent.md
.caduceus/agents/debugger/: agent.md
.caduceus/agents/dependency-manager/: agent.md
.caduceus/agents/devops-engineer/: agent.md
.caduceus/agents/documenter/: agent.md
.caduceus/agents/frontend-dev/: agent.md
.caduceus/agents/incident-responder/: agent.md
.caduceus/agents/migrator/: agent.md
.caduceus/agents/onboarding-guide/: agent.md
.caduceus/agents/optimizer/: agent.md
.caduceus/agents/performance-engineer/: agent.md
.caduceus/agents/refactorer/: agent.md
.caduceus/agents/release-manager/: agent.md
.caduceus/agents/reviewer/: agent.md
.caduceus/agents/security-analyst/: agent.md
.caduceus/agents/tester/: agent.md
.caduceus/skills/: ai-langchain.md  auth-jwt.md  auth-oauth2.md  cloud-aws-deployment.md  cloud-azure-deployment.md  cloud-gcp-deployment.md  data-elasticsearch.md  data-redis-caching.md  integration-graphql.md  integration-grpc.md  integration-webhook.md  messaging-kafka.md  messaging-rabbitmq.md  monitoring-opentelemetry.md  monitoring-prometheus.md  python-fastapi.md  python-pandas-data.md  python-pydantic.md  python-pytest.md  python-sqlalchemy.md  release.md  rust-axum-api.md  rust-error-handling.md  rust-serde-serialization.md  rust-testing-patterns.md  rust-tokio-async.md  ts-express-api.md  ts-nextjs-app.md  ts-prisma-database.md  ts-react-components.md  ts-zod-validation.md
.caduceus/skills/accessibility/: SKILL.md
.caduceus/skills/api-design/: SKILL.md
.caduceus/skills/api-docs/: SKILL.md
.caduceus/skills/architecture-doc/: SKILL.md
.caduceus/skills/auth-review/: SKILL.md
.caduceus/skills/auth-setup/: SKILL.md
.caduceus/skills/benchmark/: SKILL.md
.caduceus/skills/caching/: SKILL.md
.caduceus/skills/changelog/: SKILL.md
.caduceus/skills/ci-pipeline/: SKILL.md
.caduceus/skills/code-comments/: SKILL.md
.caduceus/skills/code-review/: SKILL.md
.caduceus/skills/complexity/: SKILL.md
.caduceus/skills/component-gen/: SKILL.md
.caduceus/skills/crud-gen/: SKILL.md
.caduceus/skills/csrf-protection/: SKILL.md
.caduceus/skills/data-validation/: SKILL.md
.caduceus/skills/dead-code/: SKILL.md
.caduceus/skills/dependency-check/: SKILL.md
.caduceus/skills/dockerfile/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/: Cargo.toml
crates/caduceus-core/: Cargo.toml
crates/caduceus-core/src/: keybindings.rs  lib.rs
crates/caduceus-crdt/: Cargo.toml
crates/caduceus-crdt/src/: lib.rs
crates/caduceus-git/: Cargo.toml
crates/caduceus-git/src/: checkpoints.rs  lib.rs
crates/caduceus-marketplace/: Cargo.toml
crates/caduceus-marketplace/src/: catalog.rs  error.rs  installer.rs  lib.rs  manifest.rs  recommender.rs  registry.rs
crates/caduceus-marketplace/test_artifacts/install_ops/my-plugin/: plugin.json
crates/caduceus-marketplace/test_artifacts/install_verify/: plugin.json
crates/caduceus-marketplace/test_artifacts/manifest_valid/: plugin.json
crates/caduceus-mcp/: Cargo.toml
crates/caduceus-mcp/src/: client.rs  error.rs  lib.rs  manager.rs  registry.rs  types.rs
crates/caduceus-omniscience/: Cargo.toml
crates/caduceus-omniscience/src/: lib.rs
crates/caduceus-orchestrator/: Cargo.toml
crates/caduceus-orchestrator/src/: automations.rs  background.rs  bugbot.rs  compaction.rs  context.rs  headless.rs  instructions.rs  kanban.rs  lib.rs  mentions.rs  modes.rs  workers.rs
crates/caduceus-permissions/: Cargo.toml
crates/caduceus-permissions/src/: lib.rs
crates/caduceus-providers/: Cargo.toml
crates/caduceus-providers/src/: lib.rs  mock.rs
crates/caduceus-runtime/: Cargo.toml
crates/caduceus-runtime/src/: browser.rs  lib.rs  sandbox.rs
crates/caduceus-scanner/: Cargo.toml
crates/caduceus-scanner/src/: lib.rs
crates/caduceus-storage/: Cargo.toml
crates/caduceus-storage/src/: lib.rs
crates/caduceus-telemetry/: Cargo.toml
crates/caduceus-telemetry/src/: lib.rs
crates/caduceus-tools/: Cargo.toml
crates/caduceus-tools/src/: lib.rs
docs/: CUSTOMIZATION.md  GUIDE.md  INDEXING.md  PROVIDERS.md  UI-ROADMAP.md
docs/research/: DEEP-RESEARCH.md  research-agent-governance.md  research-cline-cursor-capabilities.md  research-cline-kanban.md  research-context-eviction-skillclaw.md  research-context-management.md  research-instruction-management.md  research-telemetry-infrastructure.md
docs/specs/: spec-claurst-blackbox.md  spec-claurst-full.md  spec-claw-code.md  spec-e2b.md  spec-hermes-ide-supplement.md  spec-hermes-ide.md  spec-open-multi-agent.md  spec-qdrant.md  spec-tree-sitter.md  spec-zed-crdt.md
docs/wiring-plan/: caduceus-wiring-plan-part1.md  caduceus-wiring-plan-part2.md
private/reviews/: review-code-20260411-213000.md
src/: App.tsx  keybindings.ts  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: tauri.ts
src/components/: AgentsWindow.tsx  BuddySprite.tsx  CardTerminal.tsx  Chat.tsx  CommandPalette.tsx  ContextQualityBadge.tsx  ContextViewer.tsx  ContextVisualizer.tsx  DesignMode.tsx  DesktopNotifications.tsx  DiffViewer.tsx  GitPanel.tsx  ImageRenderer.tsx  InlineDiffReview.tsx  KanbanBoard.tsx  KeybindingSettings.tsx  MarketplaceCard.tsx  MarketplacePanel.tsx  ModelPicker.tsx  OnboardingTour.tsx  SessionBrowser.tsx  SplitPane.tsx  StatusBar.tsx  SyntaxHighlighter.tsx  Terminal.tsx  ThemePicker.tsx  VimMode.tsx  VoiceInput.tsx
src/hooks/: useKeybindings.test.ts  useKeybindings.ts  useOnboarding.ts
src/types/: index.ts
tests/: wiring-check.cjs
(+30 files in other folders)
