[workspace]
members = [
    "crates/caduceus-core",
    "crates/caduceus-storage",
    "crates/caduceus-scanner",
    "crates/caduceus-git",
    "crates/caduceus-providers",
    "crates/caduceus-permissions",
    "crates/caduceus-runtime",
    "crates/caduceus-tools",
    "crates/caduceus-orchestrator",
    "crates/caduceus-telemetry",
    "crates/caduceus-omniscience",
    "crates/caduceus-crdt",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
