[package]
name = "caduceus-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
caduceus-core = { path = "../crates/caduceus-core" }
caduceus-storage = { path = "../crates/caduceus-storage" }
caduceus-scanner = { path = "../crates/caduceus-scanner" }
caduceus-git = { path = "../crates/caduceus-git" }
caduceus-providers = { path = "../crates/caduceus-providers" }
caduceus-permissions = { path = "../crates/caduceus-permissions" }
caduceus-runtime = { path = "../crates/caduceus-runtime" }
caduceus-tools = { path = "../crates/caduceus-tools" }
caduceus-orchestrator = { path = "../crates/caduceus-orchestrator" }
caduceus-telemetry = { path = "../crates/caduceus-telemetry" }
caduceus-omniscience = { path = "../crates/caduceus-omniscience" }
caduceus-crdt = { path = "../crates/caduceus-crdt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
