[package]
name = "caduceus-marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
caduceus-core = { path = "../caduceus-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = "2"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
