[package]
name = "caduceus-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
caduceus-core = { path = "../caduceus-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
