[package]
name = "caduceus-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
caduceus-core = { path = "../caduceus-core" }
caduceus-storage = { path = "../caduceus-storage" }
caduceus-providers = { path = "../caduceus-providers" }
caduceus-tools = { path = "../caduceus-tools" }
caduceus-permissions = { path = "../caduceus-permissions" }
caduceus-scanner = { path = "../caduceus-scanner" }
caduceus-telemetry = { path = "../caduceus-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
