[package]
name = "caduceus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
caduceus-core = { path = "../caduceus-core" }
caduceus-permissions = { path = "../caduceus-permissions" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
