[package]
name = "caduceus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
caduceus-core = { path = "../caduceus-core" }
caduceus-permissions = { path = "../caduceus-permissions" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
glob = "0.3"
regex = "1"
libc = "0.2"
notify = "6"

[dev-dependencies]
tempfile = "3"
