[package]
name = "caduceus-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
caduceus-core = { path = "../caduceus-core" }
caduceus-runtime = { path = "../caduceus-runtime" }
caduceus-permissions = { path = "../caduceus-permissions" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
glob = "0.3"
regex = "1"
libc = "0.2"
